--- a/Test.html
+++ b/Test.html
@@ -359,108 +359,96 @@ display: none;
 
 <pre class="r"><code># Chargement des pakages nécessaires
 require(&quot;anyLib&quot;)</code></pre>
-<pre><code>## Le chargement a nécessité le package : anyLib</code></pre>
-<pre class="r"><code>anyLib(c(&quot;tidyverse&quot;, &quot;cowplot&quot;, &quot;R2jags&quot;, &quot;lme4&quot;, &quot;gtsummary&quot;, &quot;plyr&quot;, &quot;knitr&quot;, &quot;kableExtra&quot;))</code></pre>
-<pre><code>## Le chargement a nécessité le package : tidyverse</code></pre>
+<pre><code>## Loading required package: anyLib</code></pre>
+<pre class="r"><code>anyLib(c(&quot;plyr&quot;, &quot;tidyverse&quot;, &quot;cowplot&quot;, &quot;R2jags&quot;, &quot;lme4&quot;, &quot;gtsummary&quot;, &quot;knitr&quot;, &quot;kableExtra&quot;))</code></pre>
+<pre><code>## Loading required package: plyr</code></pre>
+<pre><code>## Loading required package: tidyverse</code></pre>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.4
-## ✔ forcats   1.0.0     ✔ stringr   1.5.1
+## ✔ dplyr     1.1.3     ✔ readr     2.1.4
+## ✔ forcats   1.0.0     ✔ stringr   1.5.0
 ## ✔ ggplot2   3.4.4     ✔ tibble    3.2.1
 ## ✔ lubridate 1.9.3     ✔ tidyr     1.3.0
 ## ✔ purrr     1.0.2     
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
+## ✖ dplyr::arrange()   masks plyr::arrange()
+## ✖ purrr::compact()   masks plyr::compact()
+## ✖ dplyr::count()     masks plyr::count()
+## ✖ dplyr::desc()      masks plyr::desc()
+## ✖ dplyr::failwith()  masks plyr::failwith()
+## ✖ dplyr::filter()    masks stats::filter()
+## ✖ dplyr::id()        masks plyr::id()
+## ✖ dplyr::lag()       masks stats::lag()
+## ✖ dplyr::mutate()    masks plyr::mutate()
+## ✖ dplyr::rename()    masks plyr::rename()
+## ✖ dplyr::summarise() masks plyr::summarise()
+## ✖ dplyr::summarize() masks plyr::summarize()
 ## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors
-## Le chargement a nécessité le package : cowplot
+## Loading required package: cowplot
 ## 
 ## 
-## Attachement du package : &#39;cowplot&#39;
+## Attaching package: &#39;cowplot&#39;
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:lubridate&#39;:
+## The following object is masked from &#39;package:lubridate&#39;:
 ## 
 ##     stamp
 ## 
 ## 
-## Le chargement a nécessité le package : R2jags
+## Loading required package: R2jags
 ## 
-## Le chargement a nécessité le package : rjags
+## Loading required package: rjags
 ## 
-## Le chargement a nécessité le package : coda
+## Loading required package: coda
 ## 
-## Linked to JAGS 4.3.1
+## Linked to JAGS 4.3.2
 ## 
 ## Loaded modules: basemod,bugs
 ## 
 ## 
-## Attachement du package : &#39;R2jags&#39;
+## Attaching package: &#39;R2jags&#39;
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:coda&#39;:
+## The following object is masked from &#39;package:coda&#39;:
 ## 
 ##     traceplot
 ## 
 ## 
-## Le chargement a nécessité le package : lme4
+## Loading required package: lme4
 ## 
-## Le chargement a nécessité le package : Matrix
-## 
-## 
-## Attachement du package : &#39;Matrix&#39;
+## Loading required package: Matrix
 ## 
 ## 
-## Les objets suivants sont masqués depuis &#39;package:tidyr&#39;:
+## Attaching package: &#39;Matrix&#39;
+## 
+## 
+## The following objects are masked from &#39;package:tidyr&#39;:
 ## 
 ##     expand, pack, unpack
 ## 
 ## 
-## Le chargement a nécessité le package : gtsummary
-## 
-## #BlackLivesMatter
-## 
-## Le chargement a nécessité le package : plyr
-## 
-## ------------------------------------------------------------------------------
-## 
-## You have loaded plyr after dplyr - this is likely to cause problems.
-## If you need functions from both plyr and dplyr, please load plyr first, then dplyr:
-## library(plyr); library(dplyr)
-## 
-## ------------------------------------------------------------------------------
+## Loading required package: gtsummary
 ## 
 ## 
-## Attachement du package : &#39;plyr&#39;
+## Attaching package: &#39;gtsummary&#39;
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:gtsummary&#39;:
+## The following object is masked from &#39;package:plyr&#39;:
 ## 
 ##     mutate
 ## 
 ## 
-## Les objets suivants sont masqués depuis &#39;package:dplyr&#39;:
+## Loading required package: knitr
 ## 
-##     arrange, count, desc, failwith, id, mutate, rename, summarise,
-##     summarize
-## 
-## 
-## L&#39;objet suivant est masqué depuis &#39;package:purrr&#39;:
-## 
-##     compact
+## Loading required package: kableExtra
 ## 
 ## 
-## Le chargement a nécessité le package : knitr
-## 
-## Le chargement a nécessité le package : kableExtra
+## Attaching package: &#39;kableExtra&#39;
 ## 
 ## 
-## Attachement du package : &#39;kableExtra&#39;
-## 
-## 
-## L&#39;objet suivant est masqué depuis &#39;package:dplyr&#39;:
+## The following object is masked from &#39;package:dplyr&#39;:
 ## 
 ##     group_rows</code></pre>
-<pre><code>##  tidyverse    cowplot     R2jags       lme4  gtsummary       plyr      knitr 
+<pre><code>##       plyr  tidyverse    cowplot     R2jags       lme4  gtsummary      knitr 
 ##       TRUE       TRUE       TRUE       TRUE       TRUE       TRUE       TRUE 
 ## kableExtra 
 ##       TRUE</code></pre>
@@ -530,19 +518,19 @@ M1 &lt;- jags(
 ## Initializing model</code></pre>
 <pre class="r"><code># Regardons le modèle 
 M1</code></pre>
-<pre><code>## Inference for Bugs model at &quot;C:/Users/basil/AppData/Local/Temp/RtmpyoTmDB/model3d4067e66cb6.txt&quot;, fit using jags,
+<pre><code>## Inference for Bugs model at &quot;/var/folders/l9/dzz054qd4_q8g63vvgsts36w0000gn/T//RtmpGy3yyn/model72f752201be2.txt&quot;, fit using jags,
 ##  2 chains, each with 9000 iterations (first 4500 discarded)
 ##  n.sims = 9000 iterations saved
 ##          mu.vect sd.vect   2.5%    25%    50%    75%  97.5%  Rhat n.eff
-## b.prev     0.560   0.116  0.334  0.481  0.559  0.640  0.782 1.003  1600
-## mu.0      -3.001   0.174 -3.347 -3.114 -2.999 -2.884 -2.691 1.006   290
-## deviance  82.274   4.990 80.164 80.725 81.540 82.931 87.539 1.004  9000
+## b.prev     0.564   0.118  0.334  0.486  0.566  0.644  0.790 1.010   170
+## mu.0      -3.015   0.175 -3.358 -3.126 -3.012 -2.902 -2.683 1.012   140
+## deviance  82.282   4.727 80.155 80.664 81.493 82.970 87.891 1.001  5400
 ## 
 ## For each parameter, n.eff is a crude measure of effective sample size,
 ## and Rhat is the potential scale reduction factor (at convergence, Rhat=1).
 ## 
 ## DIC info (using the rule, pD = var(deviance)/2)
-## pD = 12.5 and DIC = 94.7
+## pD = 11.2 and DIC = 93.5
 ## DIC is an estimate of expected predictive error (lower deviance is better).</code></pre>
 <pre class="r"><code>DIC1 &lt;- M1$BUGSoutput$DIC</code></pre>
 <pre class="r"><code># The null model function
