--- a/Test.html
+++ b/Test.html
@@ -359,13 +359,13 @@ display: none;
 
 <pre class="r"><code># Chargement des pakages nécessaires
 require(&quot;anyLib&quot;)</code></pre>
-<pre><code>## Le chargement a nécessité le package : anyLib</code></pre>
+<pre><code>## Loading required package: anyLib</code></pre>
 <pre class="r"><code>anyLib(c(&quot;plyr&quot;, &quot;tidyverse&quot;, &quot;cowplot&quot;, &quot;R2jags&quot;, &quot;lme4&quot;, &quot;gtsummary&quot;, &quot;knitr&quot;, &quot;kableExtra&quot;))</code></pre>
-<pre><code>## Le chargement a nécessité le package : plyr</code></pre>
-<pre><code>## Le chargement a nécessité le package : tidyverse</code></pre>
+<pre><code>## Loading required package: plyr</code></pre>
+<pre><code>## Loading required package: tidyverse</code></pre>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.4
-## ✔ forcats   1.0.0     ✔ stringr   1.5.1
+## ✔ dplyr     1.1.3     ✔ readr     2.1.4
+## ✔ forcats   1.0.0     ✔ stringr   1.5.0
 ## ✔ ggplot2   3.4.4     ✔ tibble    3.2.1
 ## ✔ lubridate 1.9.3     ✔ tidyr     1.3.0
 ## ✔ purrr     1.0.2     
@@ -383,70 +383,70 @@ require(&quot;anyLib&quot;)</code></pre>
 ## ✖ dplyr::summarise() masks plyr::summarise()
 ## ✖ dplyr::summarize() masks plyr::summarize()
 ## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors
-## Le chargement a nécessité le package : cowplot
+## Loading required package: cowplot
 ## 
 ## 
-## Attachement du package : &#39;cowplot&#39;
+## Attaching package: &#39;cowplot&#39;
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:lubridate&#39;:
+## The following object is masked from &#39;package:lubridate&#39;:
 ## 
 ##     stamp
 ## 
 ## 
-## Le chargement a nécessité le package : R2jags
+## Loading required package: R2jags
 ## 
-## Le chargement a nécessité le package : rjags
+## Loading required package: rjags
 ## 
-## Le chargement a nécessité le package : coda
+## Loading required package: coda
 ## 
-## Linked to JAGS 4.3.1
+## Linked to JAGS 4.3.2
 ## 
 ## Loaded modules: basemod,bugs
 ## 
 ## 
-## Attachement du package : &#39;R2jags&#39;
+## Attaching package: &#39;R2jags&#39;
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:coda&#39;:
+## The following object is masked from &#39;package:coda&#39;:
 ## 
 ##     traceplot
 ## 
 ## 
-## Le chargement a nécessité le package : lme4
+## Loading required package: lme4
 ## 
-## Le chargement a nécessité le package : Matrix
-## 
-## 
-## Attachement du package : &#39;Matrix&#39;
+## Loading required package: Matrix
 ## 
 ## 
-## Les objets suivants sont masqués depuis &#39;package:tidyr&#39;:
+## Attaching package: &#39;Matrix&#39;
+## 
+## 
+## The following objects are masked from &#39;package:tidyr&#39;:
 ## 
 ##     expand, pack, unpack
 ## 
 ## 
-## Le chargement a nécessité le package : gtsummary
+## Loading required package: gtsummary
 ## 
-## #StandWithUkraine
-## 
-## 
-## Attachement du package : &#39;gtsummary&#39;
+## #BlackLivesMatter
 ## 
 ## 
-## L&#39;objet suivant est masqué depuis &#39;package:plyr&#39;:
+## Attaching package: &#39;gtsummary&#39;
+## 
+## 
+## The following object is masked from &#39;package:plyr&#39;:
 ## 
 ##     mutate
 ## 
 ## 
-## Le chargement a nécessité le package : knitr
+## Loading required package: knitr
 ## 
-## Le chargement a nécessité le package : kableExtra
+## Loading required package: kableExtra
 ## 
-## Error: le chargement du package ou de l&#39;espace de noms a échoué pour &#39;kableExtra&#39; :
-## .onLoad a échoué dans loadNamespace() pour &#39;kableExtra&#39;, détails :
-##   appel : !is.null(rmarkdown::metadata$output) &amp;&amp; rmarkdown::metadata$output %in% 
-##   erreur : &#39;length = 3&#39; in coercion to &#39;logical(1)&#39;</code></pre>
+## Error: package or namespace load failed for &#39;kableExtra&#39;:
+##  .onLoad failed in loadNamespace() for &#39;kableExtra&#39;, details:
+##   call: !is.null(rmarkdown::metadata$output) &amp;&amp; rmarkdown::metadata$output %in% 
+##   error: &#39;length = 3&#39; in coercion to &#39;logical(1)&#39;</code></pre>
 <pre><code>##       plyr  tidyverse    cowplot     R2jags       lme4  gtsummary      knitr 
 ##       TRUE       TRUE       TRUE       TRUE       TRUE       TRUE       TRUE 
 ## kableExtra 
@@ -517,19 +517,19 @@ M1 &lt;- jags(
 ## Initializing model</code></pre>
 <pre class="r"><code># Regardons le modèle 
 M1</code></pre>
-<pre><code>## Inference for Bugs model at &quot;C:/Users/basil/AppData/Local/Temp/RtmpM1oQLO/model4f34214b2ea2.txt&quot;, fit using jags,
+<pre><code>## Inference for Bugs model at &quot;/var/folders/l9/dzz054qd4_q8g63vvgsts36w0000gn/T//Rtmp1rSn18/model8048c7b126c.txt&quot;, fit using jags,
 ##  2 chains, each with 9000 iterations (first 4500 discarded)
 ##  n.sims = 9000 iterations saved
 ##          mu.vect sd.vect   2.5%    25%    50%    75%  97.5%  Rhat n.eff
-## b.prev     0.562   0.118  0.327  0.484  0.563  0.641  0.798 1.005   340
-## mu.0      -3.011   0.172 -3.356 -3.119 -3.004 -2.901 -2.697 1.003   640
-## deviance  82.361   5.856 80.154 80.696 81.523 83.106 88.047 1.020  6300
+## b.prev     0.556   0.122  0.323  0.473  0.553  0.636  0.797 1.003  1600
+## mu.0      -2.997   0.175 -3.355 -3.105 -2.989 -2.879 -2.695 1.002  1400
+## deviance  82.348   4.617 80.153 80.720 81.578 82.969 88.499 1.003  8400
 ## 
 ## For each parameter, n.eff is a crude measure of effective sample size,
 ## and Rhat is the potential scale reduction factor (at convergence, Rhat=1).
 ## 
 ## DIC info (using the rule, pD = var(deviance)/2)
-## pD = 17.1 and DIC = 99.5
+## pD = 10.7 and DIC = 93.0
 ## DIC is an estimate of expected predictive error (lower deviance is better).</code></pre>
 <pre class="r"><code>DIC1 &lt;- M1$BUGSoutput$DIC</code></pre>
 <pre class="r"><code># The null model function
@@ -1020,7 +1020,7 @@ DIC9 &lt;- M9$BUGSoutput$DIC</code></pre>
 <div id="bin" class="section level1">
 <h1>BIN</h1>
 % latex table generated in R 4.3.2 by xtable 1.8-4 package % Thu Dec 21
-12:08:37 2023
+12:11:36 2023
 </div>
 
 
